name:                hspray
version:             0.1.0.0
synopsis:            Simple multivariate polynomials.
description:         Manipulation of multivariate polynomials on a ring.
homepage:            https://github.com/stla/hsprays#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2022 Stéphane Laurent
category:            Math, Algebra
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math.Algebra.Hspray
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hashable
                     , unordered-containers
                     , numeric-prelude
                     , text
  other-extensions:    ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , MultiParamTypeClasses
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/stla/hspray
